STUD-2940: Added ignore for all hidden files