@@ -7,7 +7,21 @@
 	<name>Reach Engine - JPoller</name>
 	<url>http://www.levelsbeyond.com/</url>
 	<properties>
+		<!-- maven-compiler-plugin -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
+		<!-- maven-surefire-plugin -->
+		<surefire.args>-Xmx512m -XX:MaxPermSize=256m -Djava.awt.headless=true</surefire.args>
+		<!-- maven-install-plugin -->
+		<installAtEnd>true</installAtEnd>
+		<!-- maven-deploy-plugin -->
+		<deployAtEnd>true</deployAtEnd>
+		<!-- maven-release-plugin -->
+		<pushChanges>true</pushChanges>
+		<!-- dependency versions -->
+		<slf4j.version>1.7.5</slf4j.version>
+		<spring.version>3.1.1.RELEASE</spring.version>
 	</properties>
 
 	<scm>
@@ -18,35 +32,99 @@
 
 	<distributionManagement>
 		<repository>
-			<uniqueVersion>false</uniqueVersion>
 			<id>LB-Releases</id>
-			<name>Levels Beyond Releases</name>
-			<url>http://dev.levelsbeyond.com:8080/nexus/content/repositories/releases</url>
-			<layout>default</layout>
+			<url>http://levelsbeyond.artifactoryonline.com/levelsbeyond/libs-releases-local</url>
 		</repository>
 		<snapshotRepository>
-			<uniqueVersion>true</uniqueVersion>
 			<id>LB-Snapshots</id>
-			<name>Levels Beyond Snapshots</name>
-			<url>http://dev.levelsbeyond.com:8080/nexus/content/repositories/snapshots</url>
-			<layout>default</layout>
+			<url>http://levelsbeyond.artifactoryonline.com/levelsbeyond/libs-snapshots-local</url>
 		</snapshotRepository>
 	</distributionManagement>
 
+	<repositories>
+		<repository>
+			<id>central</id>
+			<url>http://repo1.maven.org/maven2</url>
+		</repository>
+		<repository>
+			<id>LB-repository</id>
+			<url>https://levelsbeyond.artifactoryonline.com/levelsbeyond/repo/</url>
+		</repository>
+	</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>central</id>
+			<url>http://repo1.maven.org/maven2</url>
+		</pluginRepository>
+		<pluginRepository>
+			<id>LB-repository</id>
+			<url>https://levelsbeyond.artifactoryonline.com/levelsbeyond/repo/</url>
+		</pluginRepository>
+	</pluginRepositories>
+
 	<build>
+		<testResources>
+			<testResource>
+				<directory>src/test/resources</directory>
+			</testResource>
+		</testResources>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
 		<defaultGoal>install</defaultGoal>
 		<plugins>
+
+
 			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.7.1.201405082137</version>
+				<executions>
+					<!--
+						Prepares the property pointing to the JaCoCo runtime agent which
+						is passed as VM argument when Maven the Surefire plugin is executed.
+					-->
+					<execution>
+						<id>pre-test</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+						<configuration>
+							<!--
+								Sets the name of the property containing the settings
+								for JaCoCo runtime agent.
+							-->
+							<propertyName>surefireArgLine</propertyName>
+						</configuration>
+					</execution>
+					<!--
+						Ensures that the code coverage report for unit tests is created after
+						unit tests have been run.
+					-->
+					<execution>
+						<id>post-test</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<target>1.6</target>
-					<source>1.6</source>
+					<argLine>${surefire.args} ${surefireArgLine}</argLine>
+					<systemPropertyVariables>
+						<java.awt.headless>true</java.awt.headless>
+						<log4j.configuration>file:src/test/resources/log4j.properties</log4j.configuration>
+					</systemPropertyVariables>
 				</configuration>
 			</plugin>
 			<plugin>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>2.1</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -57,62 +135,52 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<version>2.5</version>
-				<configuration />
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.8.1</version>
-			</plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-plugin-plugin</artifactId>
+					<version>2.9</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.1</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>2.3</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.14.1</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>2.8.1</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-install-plugin</artifactId>
+					<version>2.5.1</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<version>2.8.1</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-release-plugin</artifactId>
+					<version>2.1</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
-	<repositories>
-		<repository>
-			<releases>
-				<enabled>true</enabled>
-				<updatePolicy>always</updatePolicy>
-				<checksumPolicy>warn</checksumPolicy>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-				<updatePolicy>always</updatePolicy>
-				<checksumPolicy>warn</checksumPolicy>
-			</snapshots>
-			<id>LB-repository</id>
-			<name>LB Repository</name>
-			<url>http://dev.levelsbeyond.com:8080/nexus/content/groups/public</url>
-			<layout>default</layout>
-		</repository>
-	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<id>lbReleases</id>
-			<name>LB Releases</name>
-			<url>http://dev.levelsbeyond.com:8080/nexus/content/repositories/releases</url>
-			<layout>default</layout>
-		</pluginRepository>
-		<pluginRepository>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<id>lbSnapshots</id>
-			<name>LB Snapshots</name>
-			<url>http://dev.levelsbeyond.com:8080/nexus/content/repositories/snapshots</url>
-			<layout>default</layout>
-		</pluginRepository>
-	</pluginRepositories>
 
 	<dependencies>
 		<dependency>
